--- a/sudo/sudo.csproj
+++ b/sudo/sudo.csproj
@@ -49,8 +49,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandEscaper.cs" />
+    <Compile Include="Debugging.cs" />
     <Compile Include="Sudo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
