--- a/sudo/sudo.csproj
+++ b/sudo/sudo.csproj
@@ -52,7 +52,8 @@
     <Compile Include="Debugging.cs" />
     <Compile Include="Sudo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utilities.cs" />
+    <Compile Include="Utilities\ConsoleUtilities.cs" />
+    <Compile Include="Utilities\ProcessUtilities.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
