--- a/sudo/sudo.csproj
+++ b/sudo/sudo.csproj
@@ -48,8 +48,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationInfo.cs" />
     <Compile Include="CommandEscaper.cs" />
     <Compile Include="Debugging.cs" />
+    <Compile Include="Settings.cs" />
     <Compile Include="Sudo.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilities\ConsoleUtilities.cs" />
